conjure-typescript/src/test/resources/errors/expected/@palantir/product/index.ts
export { IInvalidServiceDefinition, IInvalidTypeDefinition, IJavaCompilationFailed, isInvalidServiceDefinition, isInvalidTypeDefinition, isJavaCompilationFailed } from "@palantir/product/errors";
